--- a/package.json
+++ b/package.json
@@ -14,9 +14,25 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
+    "google-auth-library": "^10.5.0",
     "mongoose": "^8.19.1",
+    "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "qrcode": "^1.5.4"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Majenayu/SLR.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Majenayu/SLR/issues"
+  },
+  "homepage": "https://github.com/Majenayu/SLR#readme"
 }
